# Voice-Interview-Agent

./: .gitignore  README.md
backend/: .env  Dockerfile  README.md  agent.py  agent_realtime.py  main.py  pyproject.toml  requirements.txt  survey_data.py  utils.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/components/: agent-session.tsx  hamburger-menu.tsx
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: hamburgerMenu.jsx
frontend/src/language/: en.json  index.jsx  roman.json  ur.json
frontend/src/pages/: endPage.jsx  interviewPage.jsx  landingPage.jsx
frontend/src/services/: api.jsx
